# robo2-color-guessor

./: .gitignore  README.md  robo2-color-guessor.code-workspace
arduino/blink/: blink.ino  sketch.yaml
client/: package.json  pnpm-lock.yaml  tailwind.config.ts
client/src/app/: layout.tsx
client/src/app/(menu)/: page.tsx
client/src/app/(menu)/appetizer/: page.tsx
client/src/app/(menu)/dessert/: page.tsx
client/src/app/(menu)/maincourse/: page.tsx
client/src/app/(menu)/qr/: page.tsx
client/src/components/game/appetizer/: main.tsx  question.tsx
client/src/components/game/dessert/: main.tsx  question.tsx
client/src/components/game/drinks/: main.tsx  question.tsx
client/src/components/game/maincourse/: main.tsx  question.tsx
client/src/components/game/scenes/: bun.tsx  (+3 more)
client/src/components/icon/: back.tsx
client/src/components/meal/: breakfast.tsx  cake.tsx  flower.tsx  infinity_fuzz.tsx
client/src/components/menu/: appetizer.tsx  dessert.tsx  drinks.tsx
client/src/components/vectors/: main_course.tsx
client/src/font/: fonts.ts
client/src/utils/: score.ts  useTimer.ts
color-processor/: Dockerfile  README.md  pyproject.toml  run.py
color-processor/color_processor/: __init__.py  main.py
color-processor/color_processor/app/: __init__.py  routes.py
color-processor/color_processor/qr_code/: __init__.py  main.py
color-processor/color_processor/socket/: __init__.py  main.py
server/: Dockerfile  pyproject.toml  run.py
server/server/: __init__.py  main.py  routes.py
socket-consumer/: index.ts  package.json  pnpm-lock.yaml  server.ts
(+15 files in other folders)
