[tool.poetry]
name = "color-processor"
version = "0.1.0"
description = ""
authors = ["betich <betich365@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "run:main"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"
ultralytics = "^8.2.2"
python-socketio = "^5.11.2"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
