[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["betich <betich365@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "run:main"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^22.0.0"
flask-socketio = "^5.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
